--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2, 
   "name": "Planktometer",
   "description": "Hack-a-thon Codesmith Cohort 1",
-  "version": 1.0,
+  "version": "1.0",
   "browser_action": {
     "default_icon": "popup/icon.png",
     "default_popup": "popup/popup.html"
